NXP-31388: cleanup / format